--- a/prompt.html
+++ b/prompt.html
@@ -117,7 +117,8 @@
   <pre><code class="language-cpp">std::vector<Node*> CultivarTree::NodesFromFile(const std::string& file_name)</code></pre>
 </div>
 <p>
-    
+    Returns an std::vector of pointers to Nodes that have been allocated on 
+    the free store, from a file that defines the structure of a given Cultivar Tree.
 </p>
 
 <div class="box">
